--- a/src/_index.scss
+++ b/src/_index.scss
@@ -4,6 +4,8 @@
 @tailwind utilities;
 @import url("https://fonts.cdnfonts.com/css/google-sans");
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 *,
 *::after,
 *::before {
@@ -20,7 +22,7 @@ body {
 }
 
 .secondary-font {
-  font-family: "Work Sans", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 /* .input {
@@ -50,7 +52,7 @@ textarea {
 
 button {
   height: 40px;
-  @apply bg-sky-500 text-white font-bold py-2 px-4 rounded-lg flex justify-center items-center transition-colors;
+  @apply bg-sky-500 text-white font-bold py-2 px-4 rounded-sm flex justify-center items-center transition-colors;
   &:hover {
     @apply bg-sky-600;
   }
