--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -4,7 +4,7 @@
   width: 120px;
   height: 120px;
   animation: spin 500ms infinite cubic-bezier(0.4, 0, 0.2, 1);
-  @apply border-t-sky-500;
+  @apply border-t-violet-500;
 
   &.spinner-small {
     width: 40px;
