--- a/src/_index.scss
+++ b/src/_index.scss
@@ -1,4 +1,5 @@
 @import "./normalize.scss";
+@import "./animations.scss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -31,7 +32,7 @@ body {
 
   &:focus-within {
     label {
-      @apply text-sky-400 transition-colors font-bold;
+      @apply text-violet-400 transition-colors font-bold;
     }
   }
 sp
@@ -46,15 +47,15 @@ sp
 
 input,
 textarea {
-  @apply border outline-none border-gray-200 focus:ring focus:ring-sky-300 rounded-sm py-3 px-4 text-slate-500;
+  @apply border outline-none border-gray-200 focus:ring focus:ring-violet-300 rounded-sm py-3 px-4 text-slate-500;
 }
  */
 
 button {
   height: 40px;
-  @apply bg-sky-500 text-white font-bold py-2 px-4 rounded-sm flex justify-center items-center transition-colors;
+  @apply bg-violet-500 text-white font-bold py-2 px-4 rounded-sm flex justify-center items-center transition-colors;
   &:hover {
-    @apply bg-sky-600;
+    @apply bg-violet-600;
   }
 }
 
