--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -2,6 +2,6 @@ li {
   @apply transition-colors;
   &:hover,
   a.active {
-    @apply bg-sky-50 text-sky-500 cursor-pointer;
+    @apply bg-violet-50 text-violet-500 cursor-pointer;
   }
 }
