--- a/src/pages/super-admin/components/Courses/Courses.scss
+++ b/src/pages/super-admin/components/Courses/Courses.scss
@@ -1,5 +1,5 @@
 $mobile-menu: 72px;
 
 .container-overflow {
-  height: calc(100vh - #{$mobile-menu} * 2);
+  height: calc(100% - #{$mobile-menu} * 2);
 }
