--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -1,4 +1,8 @@
 .container-overflow {
   height: calc(100% - 72px * 3);
   overflow-y: auto;
+
+  @media screen and (min-width: 768px) {
+    height: calc(100% - 72px * 2) !important;
+  }
 }
