--- a/src/pages/super-admin/Payments/PaymentList/PaymentList.scss
+++ b/src/pages/super-admin/Payments/PaymentList/PaymentList.scss
@@ -1,12 +1,109 @@
-$empty: 48px;
-$remaining: calc(100% - #{$empty});
+.bg-gray-50 {
+  background-color: #f9fafb;
+}
+
+.text-gray-500 {
+  color: #6b7280;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.border-b {
+  border-bottom: 1px solid #e5e7eb;
+}
+
+.bg-white {
+  background-color: #ffffff;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
+}
+
+.grow-0 {
+  flex-grow: 0;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
 
 .longest {
-  flex: 1;
+  flex: 2;
+  min-width: 200px;
 }
 
 .other {
-  flex: 0 0 15%;
-  max-width: 15%;
-  text-align: left;
+  flex: 1;
+  min-width: 100px;
+}
+
+@media (max-width: 768px) {
+  .PaymentListHeader div,
+  .PaymentListBody div {
+    flex: 1 1 100%;
+    text-align: left;
+  }
+
+  .PaymentListBody {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .PaymentListBody .flex {
+    flex-direction: column;
+    padding: 0.5rem 0;
+  }
+
+  .PaymentListBody .shrink-0 {
+    text-align: left;
+  }
+
+  .PaymentListHeader {
+    display: none; /* Hide header on small screens */
+  }
 }
