--- a/src/_animations.scss
+++ b/src/_animations.scss
@@ -1,11 +1,27 @@
 @keyframes fadeIn {
   from {
     opacity: 0;
-    scale: 0.98;
+    transform: scale(
+      0.95
+    ); /* A slight scale creates a more natural appearance */
   }
   to {
     opacity: 1;
-    scale: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes scaleInfinity {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(
+      1.3
+    ); /* Slightly larger midpoint for more dynamic effect */
+  }
+  100% {
+    transform: scale(3); /* Reduced final scale for a quicker animation */
   }
 }
 
@@ -19,9 +35,114 @@
 }
 
 .fade-in {
-  animation: fadeIn 300ms cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+  animation: fadeIn 300ms cubic-bezier(0.4, 0, 0.2, 1) forwards; /* Shortened duration for quicker response */
 }
 
 .fade-out {
-  animation: fadeOut 300ms ease-out forwards;
+  animation: scaleInfinity 800ms ease-out, fadeOut 300ms ease-out forwards; /* Reduced duration for faster interactivity */
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.spin {
+  animation: spin 600ms cubic-bezier(0.4, 0, 0.2, 1) infinite; /* Faster spin for a more dynamic effect */
+}
+
+/* Bounce Animation */
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+}
+
+.bounce {
+  animation: bounce 1s ease infinite;
+}
+
+/* Slide In Animation */
+@keyframes slideIn {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.slide-in {
+  animation: slideIn 300ms ease-out forwards;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-5px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.slide-down {
+  animation: slideDown 300ms ease-out forwards;
+}
+
+/* Pulse Animation */
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.pulse {
+  animation: pulse 1s infinite;
+}
+
+/* Shake Animation */
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.shake {
+  animation: shake 300ms ease-in-out;
 }
