--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -1,4 +1,9 @@
 .spinner {
+  &.spinner-small {
+    width: 40px;
+    height: 40px;
+    border-width: 4px;
+  }
   border: 8px solid #f3f3f3;
   border-radius: 50%;
   width: 120px;
