--- a/src/_animations.scss
+++ b/src/_animations.scss
@@ -94,17 +94,32 @@
 
 @keyframes slideDown {
   from {
-    transform: translateY(-5px);
+    transform: translateY(0);
     opacity: 0;
   }
   to {
-    transform: translateX(0);
+    transform: translateY(100%);
     opacity: 1;
   }
 }
 
 .slide-down {
   animation: slideDown 300ms ease-out forwards;
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+}
+
+.slide-up {
+  animation: slideUp 300ms ease-out forwards;
 }
 
 /* Pulse Animation */
