Start Designing the home page

--- a/src/_animations.scss
+++ b/src/_animations.scss
@@ -98,7 +98,7 @@
     opacity: 0;
   }
   to {
-    transform: translateY(100%);
+    transform: translateY(10px);
     opacity: 1;
   }
 }
@@ -113,7 +113,7 @@
     opacity: 1;
   }
   to {
-    transform: translateY(-100%);
+    transform: translateY(-10px);
     opacity: 0;
   }
 }
