--- a/src/_index.scss
+++ b/src/_index.scss
@@ -22,6 +22,9 @@ body {
   overflow: hidden;
 }
 
+.banner-bg {
+  background-color: #f7f7f7;
+}
 .secondary-font {
   font-family: "Inter", sans-serif;
 }
