--- a/src/_index.scss
+++ b/src/_index.scss
@@ -1,5 +1,6 @@
 @import "./normalize.scss";
 @import "./animations.scss";
+@import "./scrollthumb.scss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
